--- a/Site web/English/Logbook.html
+++ b/Site web/English/Logbook.html
@@ -45,78 +45,48 @@
         </header>
     </div>
 
-    <div id="contenu">
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
+    <div id="contenu-journal">
+        <p class="images-float-left">
+            <img src="../images/journal test.jpg" alt="jounal de bord" />
         </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
+        <p style="line-height: 25px;">
+            Texte à droite de l'image supposé
         </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
+
+        <p class="images-float-right">
+            <img src="../images/journal test.jpg" alt="jounal de bord" />
         </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
+        <p style="line-height: 25px;">
+            Texte à gauche de l'image supposé mais non, car je sais pas on va devoir mettre bcp de break machin faisons un test </br>
+            </br>
+            </br>
+            </br>
+            </br>
+            </br>
+            </br>
+            </br>
+            </br> ugivu </br>
+            </br>
+            </br>
+            </br> gvyv
+            </br>
+            </br>
+            </br>
+            </br>
+            </br>
+            </br>
+            </br> ugivu </br>
+            </br>
+            </br>
+            </br>
+            </br>
+            </br>
+            </br>
+            </br> ugivu
+            <!-- bref ca marche mais dependement de la grosseur il faut olus ou moin de texte -->
         </p>
     </div>
+
 
 </body>
 
