--- a/Site web/English/The robot.html
+++ b/Site web/English/The robot.html
@@ -7,6 +7,7 @@
     <title> MomoInsideOut - The robot </title>
     <link rel="icon" type="image/png" href="../images/boule bleue.png" />
     <link rel="stylesheet" href="../CSS/Barre fixe.css" />
+    <link rel="stylesheet" href="../CSS/timeline.css" />
 </head>
 
 <body>
@@ -45,78 +46,70 @@
         </header>
     </div>
 
-    <div id="contenu">
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
-        <p>
-            Le club de robotique du collège montmorency Le club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe
-            club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège montmorencyLe club de robotique du collège
-            montmorencyLe club de robotique du collège montmorency
-        </p>
+    <div id="contenu-timeline">
+        <div class="timeline">
+            <div class="container left">
+                <div class="content">
+                    <h2>Semaine 1</h2>
+                    <dl>
+                        <dt>Analyse du défis et des obstacles</dt>
+                        <dd>Trouver les objectifs</dd>
+                        <dt>Début des idées</dt>
+                        <dd>BrainStorm</dd>
+                        <dd>Analyse des idées</dd>
+                        <dd>Conception des plans pour l'équipe</dd>
+                        <dt>Démontage de l'ancien robot</dt>
+                        <dd>Récupération des anciennes pièces</dd>
+                    </dl>
+                </div>
+            </div>
+            <div class="container right">
+                <div class="content">
+                    <h2>Semaine 2</h2>
+                    <dl>
+
+                        <dt>Début des prototypes</dt>
+                        <dd>Dessins de croquis</dd>
+                        <dd>Construction d'une base amovible</dd>
+                        <dd>Électronique de base</dd>
+                        <dd>Début de la construction du tube pressoir à champignon</dd>
+
+                    </dl>
+                </div>
+            </div>
+            <div class="container left">
+                <div class="content">
+                    <h2>Semaine 3</h2>
+                    <p>Lorem ipsum..</p>
+                </div>
+            </div>
+            <div class="container right">
+                <div class="content">
+                    <h2>Semaine 4</h2>
+                    <p>Lorem ipsum..</p>
+                </div>
+            </div>
+            <div class="container left">
+                <div class="content">
+                    <h2>Semaine 5</h2>
+                    <p>Lorem ipsum..</p>
+                </div>
+            </div>
+            <div class="container right">
+                <div class="content">
+                    <h2>Semaine 6</h2>
+                    <p>Lorem ipsum..</p>
+                </div>
+            </div>
+            <div class="container left">
+                <div class="content">
+                    <h2>Semaine 7</h2>
+                    <p>Lorem ipsum..</p>
+                </div>
+            </div>
+        </div>
     </div>
+
 
 </body>
 
