--- a/Site web/Français/Souvenirs.html
+++ b/Site web/Français/Souvenirs.html
@@ -51,6 +51,10 @@
         <!--<img src="../images/journal test.jpg" alt="test">-->
         <img src="../images/image temporaire.png" alt="test">
         <img src="../images/image temporaire.png" alt="test">
+        <img src="../images/image temporaire.png" alt="test">
+        <img src="../images/image temporaire.png" alt="test">
+        <img src="../images/image temporaire.png" alt="test">
+        <img src="../images/image temporaire.png" alt="test">
     </div>
 
 </body>
