--- a/Site web/English/Home page.html
+++ b/Site web/English/Home page.html
@@ -69,6 +69,9 @@
             This year, the competition, Flip 2020, will take place during the 13th to 15th of February at <a href="https://www.google.com/maps/place/C%C3%A9gep+Vanier/@45.5144775,-73.6775208,17z/data=!3m1!4b1!4m5!3m4!1s0x4cc91840f9cb4ca1:0xce7f12be3902472b!8m2!3d45.5144775!4d-73.6753321">Cégep Vanier</a>            (821 Sainte Croix Ave, Saint-Laurent, Québec, H4L 3X9).
 
         </p>
+        <h2>
+            Tutoriel
+        </h2>
     </div>
 
 </body>
