--- a/Site web/Français/Page principale.html
+++ b/Site web/Français/Page principale.html
@@ -71,6 +71,9 @@
             Cette année, la compétition de robotique Flip 2020 se déroulera du 13 au 15 février 2020 au <a href="https://www.google.com/maps/place/C%C3%A9gep+Vanier/@45.5144775,-73.6775208,17z/data=!3m1!4b1!4m5!3m4!1s0x4cc91840f9cb4ca1:0xce7f12be3902472b!8m2!3d45.5144775!4d-73.6753321">Cégep Vanier</a>            (821 Sainte Croix Ave, Saint-Laurent, Québec, H4L 3X9).
 
         </p>
+        <h2>
+            Tutoriel
+        </h2>
 
     </div>
 
