section tutoriel et test de citage

--- a/Site web/Français/Page principale.html
+++ b/Site web/Français/Page principale.html
@@ -74,7 +74,14 @@
         <h2>
             Tutoriel
         </h2>
+        <p> ici il va y avoir le video du tutoriel</p>
 
+        <h4>
+            Thème
+        </h4>
+        <p>
+            Le thème de cette année provient du film Inside Out, Sans Dessus Dessous, sorti en 2015, il est produit par Disney et Pixar Animation Studio.
+        </p>
     </div>
 
 </body>
