le robot et orthohraphes

--- a/Site web/Français/Le jeux.html
+++ b/Site web/Français/Le jeux.html
@@ -46,7 +46,13 @@
     </div>
 
     <div id="contenu">
-
+        <h2>
+            Flip 2020
+        </h2>
+        <p>
+            Description du jeu
+        </p>
+        <p>Vidéo où il y a l'explication du jeux.</p>
     </div>
 
 </body>
