--- a/Site web/Français/Le robot.html
+++ b/Site web/Français/Le robot.html
@@ -65,48 +65,72 @@
             </div>
             <div class="container right">
                 <div class="content">
-                    <h2>Semaine 2</h2>
+                    <h2>Semaine 2 à 4</h2>
                     <dl>
 
                         <dt>Début des prototypes</dt>
                         <dd>Dessins de croquis</dd>
-                        <dd>Construction d'une base amovible</dd>
                         <dd>Électronique de base</dd>
                         <dd>Début de la construction du tube pressoir à champignon</dd>
+                        <dd>Design de l'entonnoir pour la balle</dd>
+                        <dd>Design du mécanisme permettant d'immobiliser la tornade</dd>
+                        <dt>Construction d'une base amovible</dt>
+                        <dd>Installation des roues des années précédentes</dd>
+                        <dd>Fixation du panneau contenant l'Électronique</dd>
+                        <dd>Installation des prototypes fonctionnels</dd>
 
                     </dl>
                 </div>
             </div>
             <div class="container left">
                 <div class="content">
-                    <h2>Semaine 3</h2>
-                    <p>Lorem ipsum..</p>
-                </div>
-            </div>
-            <div class="container right">
-                <div class="content">
-                    <h2>Semaine 4</h2>
-                    <p>Lorem ipsum..</p>
-                </div>
-            </div>
-            <div class="container left">
-                <div class="content">
                     <h2>Semaine 5</h2>
-                    <p>Lorem ipsum..</p>
+                    <dl>
+                        <dt>Continuation des prototypes</dt>
+                        <dd>Construction du prototype du balai permettant d'atteindre l'arche</dd>
+                        <dt>installation</dt>
+                        <dd>Installation du dernier prototype et test</dd>
+                        <dd>Installation des contrôleurs de moteurs</dd>
+                        <dd>Installation de l'électronique</dd>
+                        <dd>Construction du mécanisme permettant d'immobiliser la tornade</dd>
+                    </dl>
                 </div>
             </div>
             <div class="container right">
                 <div class="content">
                     <h2>Semaine 6</h2>
-                    <p>Lorem ipsum..</p>
+                    <dl>
+                        <dt>Test</dt>
+                        <dd>Test drive de la base pilotable</dd>
+                        <dd>Test des differents mécanismes en mouvements</dd>
+                        <dt>Construction</dt>
+                        <dd>Ajout de lexan pour la protection du robot lors de contact avec la tornade ou d'autre robot</dd>
+                    </dl>
                 </div>
             </div>
             <div class="container left">
                 <div class="content">
-                    <h2>Semaine 7</h2>
-                    <p>Lorem ipsum..</p>
+                    <h2>Semaine 7 à 9</h2>
+                    <dl>
+                        <dt>Test</dt>
+                        <dd>Continuité des différents test</dd>
+                        <dt>Prototype</dt>
+                        <dd>Pour palier aux potentiels problèmes causés par les poils du balais trop mou, des prototypes ont été créé</dd>
+                    </dl>
                 </div>
             </div>
+            <div class="container right">
+                <div class="content">
+                    <h2>Semaine 10 à la compétition</h2>
+                    <dl>
+                        <dt>Test</dt>
+                        <dd>Test des différentes têtes de balai</dd>
+                        <dt>Installation</dt>
+                        <dd>Installation de la tête de balai final</dd>
+                    </dl>
+                </div>
+            </div>
+
         </div>
     </div>
 
