--- a/Site web/Français/Les membres.html
+++ b/Site web/Français/Les membres.html
@@ -50,7 +50,7 @@
             <div id="membres">
                 <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
             </div>
-            <h2> Karine Huot
+            <h2> Karine Huot, Personne-ressource du club de robotique
             </h2>
             <p>
 
