batch image no 1

--- a/Site web/Français/Les membres.html
+++ b/Site web/Français/Les membres.html
@@ -100,10 +100,10 @@
             <div id="membres">
                 <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
             </div>
-            <h2> case 5
+            <h2> Jérémie L'Abbée
             </h2>
             <p>
-
+                Déjà ma cinquième année dans la compétition de robotique CRC et je ne suis pas prêt d’arrêter. À chaque année j’apprend de plus en plus de connaissance et je suis toujours en quête d'une première victoire.
             </p>
         </div>
         <div id="case">
