--- a/Site web/Français/Le robot.html
+++ b/Site web/Français/Le robot.html
@@ -80,6 +80,8 @@
                         <dd>Installation des prototypes fonctionnels</dd>
 
                     </dl>
+                    <img src="../images/entonnoir.jpg" alt="image" width="100%" height="100%" />
+                    <img src="../images/La langue du robot pvc.jpg" alt="image" width="100%" height="100%" />
                 </div>
             </div>
             <div class="container left">
@@ -93,6 +95,8 @@
                         <dd>Installation des contrôleurs de moteurs</dd>
                         <dd>Installation de l'électronique</dd>
                         <dd>Construction du mécanisme permettant d'immobiliser la tornade</dd>
+                        <img src="../images/tenneur de tornade.jpg" alt="image" width="47%" height="47%" />
+                        <img src="../images/Mecanisme balai.jpg" alt="image" width="47%" height="47%" />
                     </dl>
                 </div>
             </div>
@@ -106,6 +110,8 @@
                         <dt>Construction</dt>
                         <dd>Ajout de lexan pour la protection du robot lors de contact avec la tornade ou d'autre robot</dd>
                     </dl>
+                    <img src="../images/Robot final plus ou moins avec lexan.jpg" alt="image" width="100%" height="100%" />
+                    <img src="../images/robot pas mal fini avec lexan.jpg" alt="image" width="100%" height="100%" />
                 </div>
             </div>
             <div class="container left">
