taille des images dans logbook

--- a/Site web/Français/Journal de bord.html
+++ b/Site web/Français/Journal de bord.html
@@ -51,6 +51,28 @@
         </p>
         <p style="line-height: 25px;">
             Texte à droite de l'image supposé
+            </br>
+            </br>
+            </br>
+            </br>
+            </br>
+            </br>
+            </br>
+            </br> ugivu </br>
+            </br>
+            </br>
+            </br> gvyv
+            </br>
+            </br>
+            </br>
+            </br>
+            </br>
+            </br>
+            </br>
+            </br> ugivu </br>
+            </br>
+            </br>
+            </br> gvyv
         </p>
 
         <p class="images-float-right">
