image et texte karine

--- a/Site web/Français/Les membres.html
+++ b/Site web/Français/Les membres.html
@@ -53,7 +53,8 @@
             <h2> Karine Huot, Personne-ressource du club de robotique
             </h2>
             <p>
-
+                Chaque année le club de robotique du Collège sait nous surprendre et être original avec leurs idées. Ce que je retiens de notre équipe c’est leur grand sens des responsabilité, leur fiabilité et dévouement à cette compétition. Donc mon rôle est de les
+                supporter et les aider à aller encore plus loin et se dépasser. Bravo la gang et on lâche pas!
             </p>
         </div>
         <div id="case">
