--- a/Site web/Français/Souvenirs.html
+++ b/Site web/Français/Souvenirs.html
@@ -49,7 +49,7 @@
         <!-- toujours mettre images de la meme dimentions-->
         <img src="../images/Souvenir 1.jpg" alt="boule 1">
         <!--<img src="../images/journal test.jpg" alt="test">-->
-        <img src="../images/souvenir 2.jpg" alt="boule 2">
+        <!--<img src="../images/souvenir 2.jpg" alt="boule 2">-->
         <img src="../images/souvenir 3.jpg" alt="boule 3">
         <img src="../images/souvenir 4.jpg" alt="boule 4">
         <img src="../images/souvenir 5.jpg" alt="boule 5">
