--- a/Site web/Français/Les membres.html
+++ b/Site web/Français/Les membres.html
@@ -91,6 +91,16 @@
             <div id="membres">
                 <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
             </div>
+            <h2> case 13
+            </h2>
+            <p>
+
+            </p>
+        </div>
+        <div id="case">
+            <div id="membres">
+                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
+            </div>
             <h2> case 2
             </h2>
             <p>
@@ -131,6 +141,16 @@
             <div id="membres">
                 <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
             </div>
+            <h2> case 14
+            </h2>
+            <p>
+
+            </p>
+        </div>
+        <div id="case">
+            <div id="membres">
+                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
+            </div>
             <h2> case 3
             </h2>
             <p>
@@ -162,6 +182,16 @@
                 <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
             </div>
             <h2> case 12
+            </h2>
+            <p>
+
+            </p>
+        </div>
+        <div id="case">
+            <div id="membres">
+                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
+            </div>
+            <h2> case 15
             </h2>
             <p>
 
