--- a/Site web/Francais/Casse-tete.html
+++ b/Site web/Francais/Casse-tete.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title> Momo sans dessus dessous - Casse-tête </title>
+    <title> Momo sans dessus dessous - Casse-tete </title>
     <link rel="stylesheet" media="screen" type="text/css" href="../CSS/Puzzle.css" />
     <link rel="icon" type="image/png" href="../images/boule bleue.png" />
     <link rel="stylesheet" href="../CSS/Barre fixe.css" />
@@ -36,7 +36,7 @@
                         <a href="Souvenirs.html">Souvenirs</a>
                     </li>
                     <li>
-                        <a href="Casse-tête.html">Casse-tête</a>
+                        <a href="Casse-tete.html">Casse-tête</a>
                     </li>
                 </ul>
             </nav>
