--- a/Site web/Choix de langue.html
+++ b/Site web/Choix de langue.html
@@ -11,7 +11,7 @@
 <body background="https://i.pinimg.com/originals/c3/f3/fa/c3f3fab4df6c49738448c718ae3df0cd.gif?fbclid=IwAR1uzQlFp_22m72K7f8aO7SXyat4jikuw00NKitCS0AgB3hf-I02QLprxaw">
     <p>
 
-        <a href="Français/Page principale.html">Français</a>
+        <a href="Francais/Page principale.html">Français</a>
         <br/>
         <br/>
         <a href="English/Home page.html">English</a>
