--- a/Site web/Francais/Souvenirs.html
+++ b/Site web/Francais/Souvenirs.html
@@ -37,7 +37,7 @@
                             <a href="Souvenirs.html">Souvenirs</a>
                         </li>
                         <li>
-                            <a href="Casse-tête.html">Casse-tête</a>
+                            <a href="Casse-tete.html">Casse-tête</a>
                         </li>
                     </ul>
                 </nav>
