--- a/Site web/Francais/Le jeux.html
+++ b/Site web/Francais/Le jeux.html
@@ -61,6 +61,12 @@
             la vitesse de distribution des poches, l’arche ralenti soit le convoyeur, soit la vitesse de distribution des pieces de jeu, elle peut également déposer une poche noire qui vaut pour 30 points, alors que les poches habituelles en valent 5.
             Les champignons accélèrent la vitesse du convoyeur. 30 secondes de recharge est nécessaire entre chaque activation de power-up. Le seul obstacle commun aux deux équipes est la tornade que lorsque activé arrêtera le convoyeur pour 10 secondes.
         </p>
+        <img src="../images/Le Jeux 1.png" alt="image" width="33%" />
+        <img src="../images/Le Jeux 2.png" alt="image" width="33%" />
+        <img src="../images/Le Jeux 3.png" alt="image" width="33%" />
+        <img src="../images/Le Jeux 4.png" alt="image" width="33%" />
+        <img src="../images/Le Jeux 5.png" alt="image" width="33%" />
+        <img src="../images/Le Jeux 6.png" alt="image" width="33%" />
     </div>
 
 </body>
