--- a/Site web/Francais/Page principale.html
+++ b/Site web/Francais/Page principale.html
@@ -72,6 +72,10 @@
 
         </p>
         <h2>
+            Vidéo
+        </h2>
+        <p> ici il va y avoir le video</p>
+        <h2>
             Tutoriel
         </h2>
         <p> ici il va y avoir le video du tutoriel</p>
