--- a/Site web/Francais/Les membres.html
+++ b/Site web/Francais/Les membres.html
@@ -48,6 +48,46 @@
     <div id="contenu-membres">
         <div id="case">
             <div id="membres">
+                <img src="../images/membre 1.jpg" alt="image" width="100%" height="100%" />
+            </div>
+            <h2> Alexandra Renaud
+            </h2>
+            <p>
+
+            </p>
+        </div>
+        <div id="case">
+            <div id="membres">
+                <img src="../images/membre 7.jpg" alt="image" width="100%" height="100%" />
+            </div>
+            <h2> Jiali Sauvé
+            </h2>
+            <p>
+                Deuxième année de robotique. J'aide principalement le kiosque, mais aussi ici et là quand je le peux. C'est vraiment une formidable expérience avec tout le monde on rit et on s'amuse beaucoup.
+            </p>
+        </div>
+        <div id="case">
+            <div id="membres">
+                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
+            </div>
+            <h2> Florence Millette
+            </h2>
+            <p>
+                Ma troisième année en robotique! Je fais un peu de tout, du robot, du kiosque et où on a besoin d’aide, mais cette année je me suis lancée dans la programmation du site web! Je n’avais jamais fait ça de ma vie mais j’ai adoré expérimenter.
+            </p>
+        </div>
+        <div id="case">
+            <div id="membres">
+                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
+            </div>
+            <h2> Benjamin Brault
+            </h2>
+            <p>
+
+            </p>
+        </div>
+        <div id="case">
+            <div id="membres">
                 <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
             </div>
             <h2> Karine Huot, Personne-ressource du club de robotique
@@ -59,49 +99,10 @@
         </div>
         <div id="case">
             <div id="membres">
-                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
+                <img src="../images/membre 8.jpg" alt="image" width="100%" height="100%" />
             </div>
-            <h2> case 4
-            </h2>
-            <p>
-
-            </p>
-        </div>
-        <div id="case">
-            <div id="membres">
-                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
-            </div>
-            <h2> case 7
-            </h2>
-            <p>
-
-            </p>
-        </div>
-        <div id="case">
-            <div id="membres">
-                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
-            </div>
-            <h2> case 10
-            </h2>
-            <p>
-
-            </p>
-        </div>
-        <div id="case">
-            <div id="membres">
-                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
-            </div>
-            <h2> case 13
-            </h2>
-            <p>
-
-            </p>
-        </div>
-        <div id="case">
-            <div id="membres">
-                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
-            </div>
-            <h2> case 2
+            <h2>
+                Charles Bourque
             </h2>
             <p>
 
@@ -119,9 +120,9 @@
         </div>
         <div id="case">
             <div id="membres">
-                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
+                <img src="../images/membre 3.jpg" alt="image" width="100%" height="100%" />
             </div>
-            <h2> case 8
+            <h2> Mikhael Bianki-Massé
             </h2>
             <p>
 
@@ -129,7 +130,7 @@
         </div>
         <div id="case">
             <div id="membres">
-                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
+                <img src="../images/membre 2.jpg" alt="image" width="100%" height="100%" />
             </div>
             <h2> case 11
             </h2>
@@ -149,9 +150,9 @@
         </div>
         <div id="case">
             <div id="membres">
-                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
+                <img src="../images/membre 9.jpg" alt="image" width="100%" height="100%" />
             </div>
-            <h2> case 3
+            <h2> Chloé Legault
             </h2>
             <p>
 
@@ -159,7 +160,7 @@
         </div>
         <div id="case">
             <div id="membres">
-                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
+                <img src="../images/membre 11.jpg" alt="image" width="100%" height="100%" />
             </div>
             <h2> case 6
             </h2>
@@ -169,12 +170,13 @@
         </div>
         <div id="case">
             <div id="membres">
-                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
+                <img src="../images/membre 6.jpg" alt="image" width="100%" height="100%" />
             </div>
-            <h2> case 9
+            <h2> Elyanna
             </h2>
             <p>
-
+                Joindre le club de robotique a été une bouffée d'air frais dans mon année. Ces gens sont devenue ma famille et ont permis a ma personne de grandir. Faire partie de ce club m'a donné le courage d'exploiter mes talents et j'ai recu beaucoup de gratitude
+                en échange. Un merci tout special a la capitaine de m'avoir accueillit si chaleureusement.
             </p>
         </div>
         <div id="case">
